--- a/Binner/Binner.Web/ClientApp/src/pages/Inventory.css
+++ b/Binner/Binner.Web/ClientApp/src/pages/Inventory.css
@@ -179,20 +179,6 @@
 	margin: 0.3em 0 1em 0;
 }
 
-.inventory .suggested-part {
-	font-size: 0.8em;
-	height: 19px;
-}
-
-.inventory .suggested-part span {
-	font-style: italic;
-}
-
-.inventory .suggested-part button {
-	font-weight: 500;
-	font-style: normal;
-}
-
 .inventory .ui.dropdown .menu>.item  {
 	display: flex;
 	flex-direction: column-reverse;
